swipe done
